--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
 # generated from manifests external_dependencies
+fastapi
+python-multipart
+ujson
+a2wsgi
+parse-accept-language
+graphene
+graphql_server
