--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 # generated from manifests external_dependencies
 a2wsgi
+extendable-pydantic>=1.2.0
+extendable>=0.0.4
 fastapi
 graphene
 graphql_server
 parse-accept-language
+pydantic>=2.0.0
 python-multipart
 ujson
